# gels

./: CLAUDE.md  Cargo.toml  README.md  TODO.md  flake.nix
crates/gels/: Cargo.toml
crates/gels-core/: Cargo.toml
crates/gels-core/src/: emit.rs  grammar.rs  lib.rs  profile.rs  token.rs  traits.rs
crates/gels-synth/: Cargo.toml
crates/gels-synth/src/: lib.rs  merge.rs  output.rs  validate.rs
crates/gels-traits/: Cargo.toml
crates/gels-traits/src/: bindings.rs  blocks.rs  delimiters.rs  keywords.rs  lib.rs  operators.rs  patterns.rs  registry.rs  strings.rs  terminators.rs  tokenize.rs
crates/gels/src/: lib.rs  main.rs
docs/: architecture.md  getting-started.md  index.md  introduction.md  package.json  trait-detectors.md
docs/.vitepress/: config.ts
