[workspace]
resolver = "2"
default-members = ["crates/gels"]
members = [
    "crates/gels",
    "crates/gels-core",
    "crates/gels-traits",
    "crates/gels-synth",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rhi-zone/gels"

[workspace.dependencies]
gels-core = { path = "crates/gels-core", version = "0.1.0" }
gels-traits = { path = "crates/gels-traits", version = "0.1.0" }
gels-synth = { path = "crates/gels-synth", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
debug = 0
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
strip = true
